<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory android:title="@string/back_up">

        <Preference
            android:key="pref_backup_export"
            android:summary="@string/pref_backup_export_summary"
            android:title="@string/pref_backup_export_title" />

        <Preference
            android:key="pref_backup_import"
            android:summary="@string/pref_backup_import_summary"
            android:title="@string/pref_backup_import_title" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_title_keyboard">

        <Preference
            android:icon="@drawable/outline_border_color_24"
            android:key="keyboard_screen_preference"
            android:summary="@string/keyboard_screen_preference_summary"
            android:title="@string/keyboard_screen_size_preference_title" />

        <SwitchPreferenceCompat
            android:key="composing_guide_text_enabled"
            android:defaultValue="false"
            android:title="@string/composing_guide_text_title" />

        <SwitchPreferenceCompat
            android:key="composing_guide_show_live_reading"
            android:dependency="composing_guide_text_enabled"
            android:defaultValue="false"
            android:title="@string/composing_guide_show_live_reading" />

        <SeekBarPreference
            android:key="composing_guide_text_size_setting"
            android:dependency="composing_guide_text_enabled"
            android:persistent="false"
            android:title="@string/composing_guide_text_size"
            android:max="56"
            app:min="18"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:key="composing_guide_enabled"
            android:defaultValue="false"
            android:title="@string/composing_guide_title"
            android:summary="@string/composing_guide_summary" />

        <ListPreference
            android:key="composing_guide_scroll_direction"
            android:dependency="composing_guide_enabled"
            android:defaultValue="vertical"
            android:title="@string/composing_guide_scroll_direction"
            android:entries="@array/composing_guide_scroll_labels"
            android:entryValues="@array/composing_guide_scroll_values"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:key="composing_guide_display_mode"
            android:defaultValue="integrated"
            android:title="@string/composing_guide_display_mode"
            android:entries="@array/composing_guide_display_labels"
            android:entryValues="@array/composing_guide_display_values"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:key="composing_guide_text_reset"
            android:title="@string/composing_guide_text_reset" />
        <Preference
            android:key="composing_guide_candidates_reset"
            android:title="@string/composing_guide_candidates_reset" />
        <Preference
            android:key="composing_guide_integrated_reset"
            android:title="@string/composing_guide_integrated_reset" />

        <Preference
            android:icon="@drawable/outline_border_color_24"
            android:key="keyboard_key_letter_size_fragment_preference"
            android:title="@string/key_candidate_letter_size_preference_title"
            app:summary="@string/key_candidate_letter_size_preference_summary" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/conversion_preference_title">

        <SeekBarPreference
            android:defaultValue="4"
            android:key="n_best_preference"
            android:max="16"
            android:summary="@string/n_best_preference_summary"
            android:title="N-Best"
            app:min="2"
            app:showSeekBarValue="true" />

        <SeekBarPreference
            android:defaultValue="20"
            android:key="conversion_beam_width_preference"
            android:max="100"
            android:summary="@string/conversion_beam_width_preference_summary"
            android:title="@string/conversion_beam_width_preference_title"
            app:min="1"
            app:showSeekBarValue="true" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="reconversion_preference"
            android:title="@string/reconversion_preference_title"
            app:summary="@string/reconversion_preference_summary" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="inline_suggestion_enabled_preference"
            android:summaryOff="@string/inline_suggestion_enabled_summary_off"
            android:summaryOn="@string/inline_suggestion_enabled_summary_on"
            android:title="@string/inline_suggestion_enabled_title" />

        <Preference
            android:icon="@drawable/outline_border_color_24"
            android:key="candidate_view_height_setting_fragment_preference"
            android:title="@string/candidate_height_preference_title"
            app:summary="@string/candidate_height_preference_sumary" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/preference_dialog_title_num_columns_conversion"
            android:entries="@array/candidate_column_entries"
            android:entryValues="@array/candidate_column_values"
            android:key="candidate_column_preference"
            android:summary="@string/preference_summary_num_column_conversion"
            android:title="@string/preference_title_num_columns_conversion" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="stabilize_candidate_strip_height_preference"
            android:title="@string/stabilize_candidate_strip_height_title"
            android:summary="@string/stabilize_candidate_strip_height_summary" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="zero_query_suggestion_preference"
            android:summaryOff="@string/zero_query_suggestion_summary_off"
            android:summaryOn="@string/zero_query_suggestion_summary_on"
            android:title="@string/zero_query_suggestion_title"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="henkan_delete_key_action_preference"
            android:summaryOff="@string/henkan_delete_key_action_summary_off"
            android:summaryOn="@string/henkan_delete_key_action_summary_on"
            android:title="@string/henkan_delete_key_action_title" />

        <SwitchPreferenceCompat
            android:key="conversion_candidates_romaji_enable_preference"
            android:title="@string/conversion_candidates_romaji_enable_preference_title"
            app:defaultValue="false"
            app:summary="@string/conversion_candidates_romaji_enable_preference_summary" />

        <PreferenceCategory android:title="@string/typo_correction_title">

            <SwitchPreferenceCompat
                android:key="enable_typo_correction_japanese_flick_keyboard_preference"
                android:title="@string/enable_typo_correction_japanese_flick_keyboard_preference_title"
                app:defaultValue="false"
                app:summary="@string/enable_typo_correction_japanese_flick_keyboard_preference_sumary" />

            <SeekBarPreference
                android:key="enable_typo_correction_japanese_flick_keyboard_offset_score_preference"
                android:max="5000"
                android:title="@string/enable_typo_correction_japanese_flick_keyboard_offset_score_preference_tittle"
                app:defaultValue="3000"
                app:min="0"
                app:seekBarIncrement="10"
                app:showSeekBarValue="true"
                app:summary="@string/enable_typo_correction_japanese_flick_keyboard_offset_score_preference_summary" />

            <SwitchPreferenceCompat
                android:key="enable_typo_correction_qwerty_english_keyboard_preference"
                android:title="@string/enable_typo_correction_qwerty_english_keyboard_preference_title"
                app:defaultValue="false"
                app:summary="@string/enable_typo_correction_qwerty_english_keyboard_preference_summary" />

        </PreferenceCategory>

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_flick_input_title">

        <SeekBarPreference
            android:defaultValue="100"
            android:key="flick_sensitivity_preference"
            android:max="200"
            android:title="@string/flick_sensitivity_title"
            app:min="1"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_function_title">

        <ListPreference
            android:defaultValue="default"
            android:entries="@array/type_null_input_behavior_entries"
            android:entryValues="@array/type_null_input_behavior_values"
            android:key="type_null_input_behavior_preference"
            android:summary="%s"
            android:title="@string/type_null_input_behavior_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="delete_key_flick_left_preference"
            android:summary="@string/delete_key_left_summary"
            android:title="@string/delete_key_left_flick_title" />

        <Preference
            android:dependency="delete_key_flick_left_preference"
            android:key="delete_key_flick_left_targets_preference"
            android:summary="@string/delete_key_flick_targets_summary"
            android:title="@string/delete_key_flick_targets_title" />

        <Preference
            android:key="cursor_move_after_commit_target_pairs_preference"
            android:summary="@string/cursor_move_target_pairs_summary"
            android:title="@string/cursor_move_target_pairs_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="undo_enable_preference"
            android:summary="@string/undo_enable_summary"
            android:title="@string/undo_enable_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="clipboard_preview_enable_preference"
            android:summary="@string/pref_clipboard_preview_summary"
            android:title="@string/pref_clipboard_preview_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:dependency="clipboard_preview_enable_preference"
            android:key="clipboard_preview_tap_delete_preference"
            android:summary="@string/pref_clipboard_tap_delete_summary"
            android:title="@string/pref_clipboard_tap_delete_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="space_key_preference"
            android:summary="@string/space_key_summary"
            android:title="@string/space_key_title" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="custom_direct_mode_space_hankaku_preference"
            android:summary="@string/custom_direct_mode_space_hankaku_summary"
            android:title="@string/custom_direct_mode_space_hankaku_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="omission_search_preference"
            android:summaryOff="@string/omission_search_summary_off"
            android:summaryOn="@string/omission_search_summary_on"
            android:title="@string/omission_search_title" />

        <SeekBarPreference
            android:key="omission_search_preference_offset_score_preference"
            android:max="5000"
            android:title="@string/omission_search_preference_offset_score_preference_title"
            app:defaultValue="1900"
            app:min="0"
            app:seekBarIncrement="10"
            app:showSeekBarValue="true"
            app:summary="@string/omission_search_preference_offset_score_preference_summary" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="conversion_key_swipe_cursor_move_preference"
            android:summary="@string/pref_summary_space_longpress_cursor"
            android:title="@string/pref_title_space_longpress_cursor" />

        <SwitchPreferenceCompat
            android:key="save_last_used_keyboard"
            android:title="@string/save_last_used_keyboard_title"
            app:defaultValue="false"
            app:summary="@string/save_last_used_keyboard_summey" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_symbol_keyboard_title">
        <ListPreference
            android:defaultValue="EMOJI"
            android:dialogTitle="@string/symbol_mode_dialog_title"
            android:entries="@array/symbol_mode_entries"
            android:entryValues="@array/symbol_mode_values"
            android:key="symbol_mode_preference"
            android:summary="@string/symbol_mode_summary"
            android:title="@string/symbol_mode_title" />

        <ListPreference
            android:defaultValue="default"
            android:dialogTitle="@string/default_emoji_skin_tone_dialog_title"
            android:entries="@array/default_emoji_skin_tone_entries"
            android:entryValues="@array/default_emoji_skin_tone_values"
            android:key="default_emoji_skin_tone_preference"
            android:summary="@string/default_emoji_skin_tone_summary"
            android:title="@string/default_emoji_skin_tone_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/clipboard_history_title">
        <Preference
            android:icon="@drawable/outline_border_color_24"
            android:key="clipboard_history_preference_fragment"
            android:title="@string/clipboard_history_fragment_title"
            app:summary="@string/clipboard_history_fragment_summary" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="clipboard_delete_unpinned_after_hours_preference"
            android:title="@string/pref_clipboard_delete_unpinned_after_hours_title"
            app:summary="@string/pref_clipboard_delete_unpinned_after_hours_summary" />

        <SeekBarPreference
            android:defaultValue="1"
            android:dependency="clipboard_delete_unpinned_after_hours_preference"
            android:key="clipboard_unpinned_retention_hours_preference"
            android:max="72"
            android:title="@string/pref_clipboard_unpinned_retention_hours_title"
            app:min="1"
            app:showSeekBarValue="true"
            app:summary="@string/pref_clipboard_unpinned_retention_hours_summary" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_vibration_title">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="vibration_preference"
            android:summaryOff="@string/vibration_summary_off"
            android:summaryOn="@string/vibration_summary_on"
            android:title="@string/vibration_title" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="key_sound_preference"
            android:summaryOff="@string/key_sound_summary_off"
            android:summaryOn="@string/key_sound_summary_on"
            android:title="@string/key_sound_title" />

        <SeekBarPreference
            android:defaultValue="0"
            android:dependency="key_sound_preference"
            android:key="key_sound_volume_percent_preference"
            android:max="100"
            android:title="@string/key_sound_volume_title"
            app:min="0"
            app:showSeekBarValue="true"
            app:summary="@string/key_sound_volume_summary" />

        <Preference
            android:key="long_press_timeout_preference"
            android:summary="@string/long_press_timeout_preference_summary"
            android:title="@string/long_press_timeout_preference_title" />

        <ListPreference
            android:defaultValue="deferred"
            android:dialogTitle="@string/delete_long_press_conversion_behavior_title"
            android:entries="@array/delete_long_press_conversion_behavior_entries"
            android:entryValues="@array/delete_long_press_conversion_behavior_values"
            android:key="delete_long_press_conversion_behavior"
            android:title="@string/delete_long_press_conversion_behavior_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/category_about_app_title">
        <Preference
            android:key="preference_open_source"
            android:title="@string/open_source_libraries_title" />
        <Preference
            android:key="app_version_preference"
            android:title="@string/app_version_title" />
    </PreferenceCategory>

</PreferenceScreen>
